deploy: cd162ad1afc2dfad1cc4cb81aa7d8bb2997f9472

--- a/method_list.html
+++ b/method_list.html
@@ -630,6 +630,22 @@
 
   <li class="even ">
     <div class="item">
+      <span class='object_link'><a href="UnitMeasurements/UnitGroup.html#units_for-instance_method" title="UnitMeasurements::UnitGroup#units_for (method)">#units_for</a></span>
+      <small>UnitMeasurements::UnitGroup</small>
+    </div>
+  </li>
+  
+
+  <li class="odd ">
+    <div class="item">
+      <span class='object_link'><a href="UnitMeasurements/UnitGroup.html#units_for!-instance_method" title="UnitMeasurements::UnitGroup#units_for! (method)">#units_for!</a></span>
+      <small>UnitMeasurements::UnitGroup</small>
+    </div>
+  </li>
+  
+
+  <li class="even ">
+    <div class="item">
       <span class='object_link'><a href="UnitMeasurements/Unit.html#value-instance_method" title="UnitMeasurements::Unit#value (method)">#value</a></span>
       <small>UnitMeasurements::Unit</small>
     </div>
