deploy: 6fcf04b6fccaf17ad6c756a51838faf43737b16c

--- a/method_list.html
+++ b/method_list.html
@@ -150,7 +150,23 @@
 
   <li class="even ">
     <div class="item">
+      <span class='object_link'><a href="UnitMeasurements/Cache.html#build_cache_file_path-instance_method" title="UnitMeasurements::Cache#build_cache_file_path (method)">#build_cache_file_path</a></span>
+      <small>UnitMeasurements::Cache</small>
+    </div>
+  </li>
+  
+
+  <li class="odd ">
+    <div class="item">
       <span class='object_link'><a href="UnitMeasurements/UnitGroupBuilder.html#build_si_units-instance_method" title="UnitMeasurements::UnitGroupBuilder#build_si_units (method)">#build_si_units</a></span>
+      <small>UnitMeasurements::UnitGroupBuilder</small>
+    </div>
+  </li>
+  
+
+  <li class="even ">
+    <div class="item">
+      <span class='object_link'><a href="UnitMeasurements/UnitGroupBuilder.html#build_unit-instance_method" title="UnitMeasurements::UnitGroupBuilder#build_unit (method)">#build_unit</a></span>
       <small>UnitMeasurements::UnitGroupBuilder</small>
     </div>
   </li>
@@ -158,8 +174,40 @@
 
   <li class="odd ">
     <div class="item">
-      <span class='object_link'><a href="UnitMeasurements/UnitGroupBuilder.html#build_unit-instance_method" title="UnitMeasurements::UnitGroupBuilder#build_unit (method)">#build_unit</a></span>
+      <span class='object_link'><a href="UnitMeasurements/UnitGroupBuilder.html#cache-instance_method" title="UnitMeasurements::UnitGroupBuilder#cache (method)">#cache</a></span>
       <small>UnitMeasurements::UnitGroupBuilder</small>
+    </div>
+  </li>
+  
+
+  <li class="even ">
+    <div class="item">
+      <span class='object_link'><a href="UnitMeasurements/UnitGroup.html#cache_file-instance_method" title="UnitMeasurements::UnitGroup#cache_file (method)">#cache_file</a></span>
+      <small>UnitMeasurements::UnitGroup</small>
+    </div>
+  </li>
+  
+
+  <li class="odd ">
+    <div class="item">
+      <span class='object_link'><a href="UnitMeasurements/Measurement.html#cached-class_method" title="UnitMeasurements::Measurement.cached (method)">cached</a></span>
+      <small>UnitMeasurements::Measurement</small>
+    </div>
+  </li>
+  
+
+  <li class="even ">
+    <div class="item">
+      <span class='object_link'><a href="UnitMeasurements/Cache.html#cached_data-instance_method" title="UnitMeasurements::Cache#cached_data (method)">#cached_data</a></span>
+      <small>UnitMeasurements::Cache</small>
+    </div>
+  </li>
+  
+
+  <li class="odd ">
+    <div class="item">
+      <span class='object_link'><a href="UnitMeasurements/Measurement.html#calculate_conversion_factor-instance_method" title="UnitMeasurements::Measurement#calculate_conversion_factor (method)">#calculate_conversion_factor</a></span>
+      <small>UnitMeasurements::Measurement</small>
     </div>
   </li>
   
@@ -176,6 +224,22 @@
     <div class="item">
       <span class='object_link'><a href="UnitMeasurements/UnitGroupBuilder.html#check_for_duplicate_unit_names!-instance_method" title="UnitMeasurements::UnitGroupBuilder#check_for_duplicate_unit_names! (method)">#check_for_duplicate_unit_names!</a></span>
       <small>UnitMeasurements::UnitGroupBuilder</small>
+    </div>
+  </li>
+  
+
+  <li class="even ">
+    <div class="item">
+      <span class='object_link'><a href="UnitMeasurements/Cache.html#clear_cache-instance_method" title="UnitMeasurements::Cache#clear_cache (method)">#clear_cache</a></span>
+      <small>UnitMeasurements::Cache</small>
+    </div>
+  </li>
+  
+
+  <li class="odd ">
+    <div class="item">
+      <span class='object_link'><a href="UnitMeasurements/Measurement.html#clear_cache-class_method" title="UnitMeasurements::Measurement.clear_cache (method)">clear_cache</a></span>
+      <small>UnitMeasurements::Measurement</small>
     </div>
   </li>
   
@@ -230,16 +294,32 @@
 
   <li class="even ">
     <div class="item">
-      <span class='object_link'><a href="UnitMeasurements/Math.html#floor-instance_method" title="UnitMeasurements::Math#floor (method)">#floor</a></span>
-      <small>UnitMeasurements::Math</small>
+      <span class='object_link'><a href="UnitMeasurements/Cache.html#ensure_cache_directory_exists-instance_method" title="UnitMeasurements::Cache#ensure_cache_directory_exists (method)">#ensure_cache_directory_exists</a></span>
+      <small>UnitMeasurements::Cache</small>
     </div>
   </li>
   
 
   <li class="odd ">
     <div class="item">
+      <span class='object_link'><a href="UnitMeasurements/Math.html#floor-instance_method" title="UnitMeasurements::Math#floor (method)">#floor</a></span>
+      <small>UnitMeasurements::Math</small>
+    </div>
+  </li>
+  
+
+  <li class="even ">
+    <div class="item">
       <span class='object_link'><a href="UnitMeasurements/Formatter.html#format-instance_method" title="UnitMeasurements::Formatter#format (method)">#format</a></span>
       <small>UnitMeasurements::Formatter</small>
+    </div>
+  </li>
+  
+
+  <li class="odd ">
+    <div class="item">
+      <span class='object_link'><a href="UnitMeasurements/Cache.html#get-instance_method" title="UnitMeasurements::Cache#get (method)">#get</a></span>
+      <small>UnitMeasurements::Cache</small>
     </div>
   </li>
   
@@ -254,13 +334,21 @@
 
   <li class="odd ">
     <div class="item">
+      <span class='object_link'><a href="UnitMeasurements/Cache.html#initialize-instance_method" title="UnitMeasurements::Cache#initialize (method)">#initialize</a></span>
+      <small>UnitMeasurements::Cache</small>
+    </div>
+  </li>
+  
+
+  <li class="even ">
+    <div class="item">
       <span class='object_link'><a href="UnitMeasurements/UnitGroup.html#initialize-instance_method" title="UnitMeasurements::UnitGroup#initialize (method)">#initialize</a></span>
       <small>UnitMeasurements::UnitGroup</small>
     </div>
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="UnitMeasurements/Measurement.html#initialize-instance_method" title="UnitMeasurements::Measurement#initialize (method)">#initialize</a></span>
       <small>UnitMeasurements::Measurement</small>
@@ -268,7 +356,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="UnitMeasurements/UnitError.html#initialize-instance_method" title="UnitMeasurements::UnitError#initialize (method)">#initialize</a></span>
       <small>UnitMeasurements::UnitError</small>
@@ -276,7 +364,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="UnitMeasurements/ParseError.html#initialize-instance_method" title="UnitMeasurements::ParseError#initialize (method)">#initialize</a></span>
       <small>UnitMeasurements::ParseError</small>
@@ -284,7 +372,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="UnitMeasurements/UnitGroupBuilder.html#initialize-instance_method" title="UnitMeasurements::UnitGroupBuilder#initialize (method)">#initialize</a></span>
       <small>UnitMeasurements::UnitGroupBuilder</small>
@@ -292,7 +380,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="UnitMeasurements/UnitAlreadyDefinedError.html#initialize-instance_method" title="UnitMeasurements::UnitAlreadyDefinedError#initialize (method)">#initialize</a></span>
       <small>UnitMeasurements::UnitAlreadyDefinedError</small>
@@ -300,7 +388,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="UnitMeasurements/PrimitiveUnitAlreadySetError.html#initialize-instance_method" title="UnitMeasurements::PrimitiveUnitAlreadySetError#initialize (method)">#initialize</a></span>
       <small>UnitMeasurements::PrimitiveUnitAlreadySetError</small>
@@ -308,7 +396,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="UnitMeasurements/Unit.html#inspect-instance_method" title="UnitMeasurements::Unit#inspect (method)">#inspect</a></span>
       <small>UnitMeasurements::Unit</small>
@@ -316,10 +404,18 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="UnitMeasurements/Measurement.html#inspect-instance_method" title="UnitMeasurements::Measurement#inspect (method)">#inspect</a></span>
       <small>UnitMeasurements::Measurement</small>
+    </div>
+  </li>
+  
+
+  <li class="odd ">
+    <div class="item">
+      <span class='object_link'><a href="UnitMeasurements/Cache.html#load_cache-instance_method" title="UnitMeasurements::Cache#load_cache (method)">#load_cache</a></span>
+      <small>UnitMeasurements::Cache</small>
     </div>
   </li>
   
@@ -438,8 +534,24 @@
 
   <li class="even ">
     <div class="item">
+      <span class='object_link'><a href="UnitMeasurements/Cache.html#set-instance_method" title="UnitMeasurements::Cache#set (method)">#set</a></span>
+      <small>UnitMeasurements::Cache</small>
+    </div>
+  </li>
+  
+
+  <li class="odd ">
+    <div class="item">
       <span class='object_link'><a href="UnitMeasurements/UnitGroupBuilder.html#si_unit-instance_method" title="UnitMeasurements::UnitGroupBuilder#si_unit (method)">#si_unit</a></span>
       <small>UnitMeasurements::UnitGroupBuilder</small>
+    </div>
+  </li>
+  
+
+  <li class="even ">
+    <div class="item">
+      <span class='object_link'><a href="UnitMeasurements/Cache.html#store_cache-instance_method" title="UnitMeasurements::Cache#store_cache (method)">#store_cache</a></span>
+      <small>UnitMeasurements::Cache</small>
     </div>
   </li>
   
