deploy: f711cf47b510b6aaaa72f82f8f431cc79c88411d

--- a/method_list.html
+++ b/method_list.html
@@ -254,6 +254,22 @@
 
   <li class="odd ">
     <div class="item">
+      <span class='object_link'><a href="UnitMeasurements.html#configuration-class_method" title="UnitMeasurements.configuration (method)">configuration</a></span>
+      <small>UnitMeasurements</small>
+    </div>
+  </li>
+  
+
+  <li class="even ">
+    <div class="item">
+      <span class='object_link'><a href="UnitMeasurements.html#configure-class_method" title="UnitMeasurements.configure (method)">configure</a></span>
+      <small>UnitMeasurements</small>
+    </div>
+  </li>
+  
+
+  <li class="odd ">
+    <div class="item">
       <span class='object_link'><a href="UnitMeasurements/Unit.html#conversion_factor-instance_method" title="UnitMeasurements::Unit#conversion_factor (method)">#conversion_factor</a></span>
       <small>UnitMeasurements::Unit</small>
     </div>
@@ -358,13 +374,21 @@
 
   <li class="even ">
     <div class="item">
+      <span class='object_link'><a href="UnitMeasurements/Configuration.html#initialize-instance_method" title="UnitMeasurements::Configuration#initialize (method)">#initialize</a></span>
+      <small>UnitMeasurements::Configuration</small>
+    </div>
+  </li>
+  
+
+  <li class="odd ">
+    <div class="item">
       <span class='object_link'><a href="UnitMeasurements/UnitError.html#initialize-instance_method" title="UnitMeasurements::UnitError#initialize (method)">#initialize</a></span>
       <small>UnitMeasurements::UnitError</small>
     </div>
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="UnitMeasurements/ParseError.html#initialize-instance_method" title="UnitMeasurements::ParseError#initialize (method)">#initialize</a></span>
       <small>UnitMeasurements::ParseError</small>
@@ -372,7 +396,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="UnitMeasurements/UnitGroupBuilder.html#initialize-instance_method" title="UnitMeasurements::UnitGroupBuilder#initialize (method)">#initialize</a></span>
       <small>UnitMeasurements::UnitGroupBuilder</small>
@@ -380,7 +404,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="UnitMeasurements/UnitAlreadyDefinedError.html#initialize-instance_method" title="UnitMeasurements::UnitAlreadyDefinedError#initialize (method)">#initialize</a></span>
       <small>UnitMeasurements::UnitAlreadyDefinedError</small>
@@ -388,7 +412,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="UnitMeasurements/PrimitiveUnitAlreadySetError.html#initialize-instance_method" title="UnitMeasurements::PrimitiveUnitAlreadySetError#initialize (method)">#initialize</a></span>
       <small>UnitMeasurements::PrimitiveUnitAlreadySetError</small>
@@ -396,7 +420,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="UnitMeasurements/Unit.html#inspect-instance_method" title="UnitMeasurements::Unit#inspect (method)">#inspect</a></span>
       <small>UnitMeasurements::Unit</small>
@@ -404,7 +428,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="UnitMeasurements/Measurement.html#inspect-instance_method" title="UnitMeasurements::Measurement#inspect (method)">#inspect</a></span>
       <small>UnitMeasurements::Measurement</small>
@@ -412,7 +436,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="UnitMeasurements/Cache.html#load_cache-instance_method" title="UnitMeasurements::Cache#load_cache (method)">#load_cache</a></span>
       <small>UnitMeasurements::Cache</small>
@@ -420,7 +444,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="UnitMeasurements/Unit.html#name-instance_method" title="UnitMeasurements::Unit#name (method)">#name</a></span>
       <small>UnitMeasurements::Unit</small>
@@ -428,7 +452,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="UnitMeasurements/Unit.html#names-instance_method" title="UnitMeasurements::Unit#names (method)">#names</a></span>
       <small>UnitMeasurements::Unit</small>
@@ -436,7 +460,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="UnitMeasurements/Arithmetic.html#nonzero%3F-instance_method" title="UnitMeasurements::Arithmetic#nonzero? (method)">#nonzero?</a></span>
       <small>UnitMeasurements::Arithmetic</small>
@@ -444,7 +468,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="UnitMeasurements/Normalizer.html#normalize-class_method" title="UnitMeasurements::Normalizer.normalize (method)">normalize</a></span>
       <small>UnitMeasurements::Normalizer</small>
@@ -452,7 +476,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="UnitMeasurements/Parser.html#parse-class_method" title="UnitMeasurements::Parser.parse (method)">parse</a></span>
       <small>UnitMeasurements::Parser</small>
@@ -460,7 +484,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="UnitMeasurements/Measurement.html#parse-class_method" title="UnitMeasurements::Measurement.parse (method)">parse</a></span>
       <small>UnitMeasurements::Measurement</small>
@@ -468,7 +492,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="UnitMeasurements/Parser.html#parse_complex-class_method" title="UnitMeasurements::Parser.parse_complex (method)">parse_complex</a></span>
       <small>UnitMeasurements::Parser</small>
@@ -476,7 +500,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="UnitMeasurements/Parser.html#parse_rational-class_method" title="UnitMeasurements::Parser.parse_rational (method)">parse_rational</a></span>
       <small>UnitMeasurements::Parser</small>
@@ -484,7 +508,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="UnitMeasurements/Parser.html#parse_scientific-class_method" title="UnitMeasurements::Parser.parse_scientific (method)">parse_scientific</a></span>
       <small>UnitMeasurements::Parser</small>
@@ -492,7 +516,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="UnitMeasurements/Unit.html#parse_value-instance_method" title="UnitMeasurements::Unit#parse_value (method)">#parse_value</a></span>
       <small>UnitMeasurements::Unit</small>
@@ -500,7 +524,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="UnitMeasurements/UnitGroup.html#primitive-instance_method" title="UnitMeasurements::UnitGroup#primitive (method)">#primitive</a></span>
       <small>UnitMeasurements::UnitGroup</small>
@@ -508,7 +532,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="UnitMeasurements/UnitGroupBuilder.html#primitive-instance_method" title="UnitMeasurements::UnitGroupBuilder#primitive (method)">#primitive</a></span>
       <small>UnitMeasurements::UnitGroupBuilder</small>
@@ -516,10 +540,18 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="UnitMeasurements/Measurement.html#quantity-instance_method" title="UnitMeasurements::Measurement#quantity (method)">#quantity</a></span>
       <small>UnitMeasurements::Measurement</small>
+    </div>
+  </li>
+  
+
+  <li class="even ">
+    <div class="item">
+      <span class='object_link'><a href="UnitMeasurements.html#reset-class_method" title="UnitMeasurements.reset (method)">reset</a></span>
+      <small>UnitMeasurements</small>
     </div>
   </li>
   
@@ -782,13 +814,21 @@
 
   <li class="odd ">
     <div class="item">
+      <span class='object_link'><a href="UnitMeasurements/Configuration.html#use_cache-instance_method" title="UnitMeasurements::Configuration#use_cache (method)">#use_cache</a></span>
+      <small>UnitMeasurements::Configuration</small>
+    </div>
+  </li>
+  
+
+  <li class="even ">
+    <div class="item">
       <span class='object_link'><a href="UnitMeasurements/Unit.html#value-instance_method" title="UnitMeasurements::Unit#value (method)">#value</a></span>
       <small>UnitMeasurements::Unit</small>
     </div>
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="UnitMeasurements/Unit.html#with-instance_method" title="UnitMeasurements::Unit#with (method)">#with</a></span>
       <small>UnitMeasurements::Unit</small>
