deploy: f726a09bc858b653da973731b7a5e842f8c3be90

--- a/method_list.html
+++ b/method_list.html
@@ -324,7 +324,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="even deprecated">
     <div class="item">
       <span class='object_link'><a href="UnitMeasurements/Formatter.html#format-instance_method" title="UnitMeasurements::Formatter#format (method)">#format</a></span>
       <small>UnitMeasurements::Formatter</small>
@@ -400,6 +400,22 @@
     <div class="item">
       <span class='object_link'><a href="UnitMeasurements/UnitGroupBuilder.html#initialize-instance_method" title="UnitMeasurements::UnitGroupBuilder#initialize (method)">#initialize</a></span>
       <small>UnitMeasurements::UnitGroupBuilder</small>
+    </div>
+  </li>
+  
+
+  <li class="even ">
+    <div class="item">
+      <span class='object_link'><a href="UnitMeasurements/BlankUnitError.html#initialize-instance_method" title="UnitMeasurements::BlankUnitError#initialize (method)">#initialize</a></span>
+      <small>UnitMeasurements::BlankUnitError</small>
+    </div>
+  </li>
+  
+
+  <li class="odd ">
+    <div class="item">
+      <span class='object_link'><a href="UnitMeasurements/BlankQuantityError.html#initialize-instance_method" title="UnitMeasurements::BlankQuantityError#initialize (method)">#initialize</a></span>
+      <small>UnitMeasurements::BlankQuantityError</small>
     </div>
   </li>
   
@@ -638,13 +654,21 @@
 
   <li class="odd ">
     <div class="item">
+      <span class='object_link'><a href="UnitMeasurements/Formatter.html#to_fs-instance_method" title="UnitMeasurements::Formatter#to_fs (method)">#to_fs</a></span>
+      <small>UnitMeasurements::Formatter</small>
+    </div>
+  </li>
+  
+
+  <li class="even ">
+    <div class="item">
       <span class='object_link'><a href="UnitMeasurements/Conversion.html#to_i-instance_method" title="UnitMeasurements::Conversion#to_i (method)">#to_i</a></span>
       <small>UnitMeasurements::Conversion</small>
     </div>
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="UnitMeasurements/Conversion.html#to_r-instance_method" title="UnitMeasurements::Conversion#to_r (method)">#to_r</a></span>
       <small>UnitMeasurements::Conversion</small>
@@ -652,7 +676,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="UnitMeasurements/Unit.html#to_s-instance_method" title="UnitMeasurements::Unit#to_s (method)">#to_s</a></span>
       <small>UnitMeasurements::Unit</small>
@@ -660,7 +684,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="UnitMeasurements/Measurement.html#to_s-instance_method" title="UnitMeasurements::Measurement#to_s (method)">#to_s</a></span>
       <small>UnitMeasurements::Measurement</small>
@@ -668,7 +692,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="UnitMeasurements/Measurement.html#unit-instance_method" title="UnitMeasurements::Measurement#unit (method)">#unit</a></span>
       <small>UnitMeasurements::Measurement</small>
@@ -676,7 +700,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="UnitMeasurements/UnitError.html#unit-instance_method" title="UnitMeasurements::UnitError#unit (method)">#unit</a></span>
       <small>UnitMeasurements::UnitError</small>
@@ -684,7 +708,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="UnitMeasurements/UnitGroupBuilder.html#unit-instance_method" title="UnitMeasurements::UnitGroupBuilder#unit (method)">#unit</a></span>
       <small>UnitMeasurements::UnitGroupBuilder</small>
@@ -692,7 +716,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="UnitMeasurements/UnitAlreadyDefinedError.html#unit-instance_method" title="UnitMeasurements::UnitAlreadyDefinedError#unit (method)">#unit</a></span>
       <small>UnitMeasurements::UnitAlreadyDefinedError</small>
@@ -700,7 +724,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="UnitMeasurements/UnitGroup.html#unit_for-instance_method" title="UnitMeasurements::UnitGroup#unit_for (method)">#unit_for</a></span>
       <small>UnitMeasurements::UnitGroup</small>
@@ -708,7 +732,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="UnitMeasurements/UnitGroup.html#unit_for!-instance_method" title="UnitMeasurements::UnitGroup#unit_for! (method)">#unit_for!</a></span>
       <small>UnitMeasurements::UnitGroup</small>
@@ -716,7 +740,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="UnitMeasurements/Measurement.html#unit_from_unit_or_name!-instance_method" title="UnitMeasurements::Measurement#unit_from_unit_or_name! (method)">#unit_from_unit_or_name!</a></span>
       <small>UnitMeasurements::Measurement</small>
@@ -724,7 +748,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="UnitMeasurements/Unit.html#unit_group-instance_method" title="UnitMeasurements::Unit#unit_group (method)">#unit_group</a></span>
       <small>UnitMeasurements::Unit</small>
@@ -732,7 +756,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="UnitMeasurements/Measurement.html#unit_group-class_method" title="UnitMeasurements::Measurement.unit_group (method)">unit_group</a></span>
       <small>UnitMeasurements::Measurement</small>
@@ -740,7 +764,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="UnitMeasurements/UnitGroup.html#unit_name_to_unit-instance_method" title="UnitMeasurements::UnitGroup#unit_name_to_unit (method)">#unit_name_to_unit</a></span>
       <small>UnitMeasurements::UnitGroup</small>
@@ -748,7 +772,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="UnitMeasurements/UnitGroup.html#unit_names-instance_method" title="UnitMeasurements::UnitGroup#unit_names (method)">#unit_names</a></span>
       <small>UnitMeasurements::UnitGroup</small>
@@ -756,7 +780,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="UnitMeasurements/UnitGroup.html#unit_names_with_aliases-instance_method" title="UnitMeasurements::UnitGroup#unit_names_with_aliases (method)">#unit_names_with_aliases</a></span>
       <small>UnitMeasurements::UnitGroup</small>
@@ -764,7 +788,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="UnitMeasurements/UnitGroup.html#unit_or_alias%3F-instance_method" title="UnitMeasurements::UnitGroup#unit_or_alias? (method)">#unit_or_alias?</a></span>
       <small>UnitMeasurements::UnitGroup</small>
@@ -772,7 +796,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="UnitMeasurements/UnitGroup.html#unit_with_name_and_aliases-instance_method" title="UnitMeasurements::UnitGroup#unit_with_name_and_aliases (method)">#unit_with_name_and_aliases</a></span>
       <small>UnitMeasurements::UnitGroup</small>
@@ -780,7 +804,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="UnitMeasurements/UnitGroup.html#units-instance_method" title="UnitMeasurements::UnitGroup#units (method)">#units</a></span>
       <small>UnitMeasurements::UnitGroup</small>
@@ -788,7 +812,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="UnitMeasurements/UnitGroupBuilder.html#units-instance_method" title="UnitMeasurements::UnitGroupBuilder#units (method)">#units</a></span>
       <small>UnitMeasurements::UnitGroupBuilder</small>
@@ -796,7 +820,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="UnitMeasurements/UnitGroup.html#units_for-instance_method" title="UnitMeasurements::UnitGroup#units_for (method)">#units_for</a></span>
       <small>UnitMeasurements::UnitGroup</small>
@@ -804,7 +828,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="UnitMeasurements/UnitGroup.html#units_for!-instance_method" title="UnitMeasurements::UnitGroup#units_for! (method)">#units_for!</a></span>
       <small>UnitMeasurements::UnitGroup</small>
@@ -812,7 +836,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="UnitMeasurements/Configuration.html#use_cache-instance_method" title="UnitMeasurements::Configuration#use_cache (method)">#use_cache</a></span>
       <small>UnitMeasurements::Configuration</small>
@@ -820,7 +844,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="UnitMeasurements/Unit.html#value-instance_method" title="UnitMeasurements::Unit#value (method)">#value</a></span>
       <small>UnitMeasurements::Unit</small>
@@ -828,7 +852,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="UnitMeasurements/Unit.html#with-instance_method" title="UnitMeasurements::Unit#with (method)">#with</a></span>
       <small>UnitMeasurements::Unit</small>
